[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Delphi/AxDev.pas

unit AXDev;

interface

uses Windows, Messages, AXHD;

// Board Number를 이용하여 Board Address 찾기
function AxlGetBoardAddress (lBoardNo : LongInt; upBoardAddress : PDWord) : DWord; stdcall;
// Board Number를 이용하여 Board ID 찾기
function AxlGetBoardID (lBoardNo : LongInt; upBoardID : PDWord) : DWord; stdcall;
// Board Number를 이용하여 Board Version 찾기
function AxlGetBoardVersion (lBoardNo : LongInt; upBoardVersion : PDWord) : DWord; stdcall;
// Board Number와 Module Position을 이용하여 Module ID 찾기
function AxlGetModuleID (lBoardNo : LongInt; lModulePos : LongInt; upModuleID : PDWord) : DWord; stdcall;
// Board Number와 Module Position을 이용하여 Module Version 찾기
function AxlGetModuleVersion (lBoardNo : LongInt; lModulePos : LongInt; upModuleVersion : PDWord) : DWord; stdcall;
// Board Number와 Module Position을 이용하여 Network Node 정보 확인
function AxlGetModuleNodeInfo(lBoardNo : LongInt; lModulePos : LongInt; lpNetNo : PLongInt; upNodeAddr : PDWord) : DWord; stdcall;

// Board에 내장된 범용 Data Flash Write (PCI-R1604[RTEX master board]전용)
// lPageAddr(0 ~ 199)
// lByteNum(1 ~ 120)
// 주의) Flash에 데이타를 기입할 때는 일정 시간(최대 17mSec)이 소요되기때문에 연속 쓰기시 지연 시간이 필요함.
function AxlSetDataFlash (lBoardNo : LongInt; lPageAddr : LongInt; lBytesNum : LongInt; bpSetData : PByte) : DWord; stdcall;
// Board에 내장된 범용 Data Flash Read(PCI-R1604[RTEX master board]전용)
// lPageAddr(0 ~ 199)
// lByteNum(1 ~ 120)
function AxlGetDataFlash (lBoardNo : LongInt; lPageAddr : LongInt; lBytesNum : LongInt; bpSetData : PByte) : DWord; stdcall;

// Board Number와 Module Position을 이용하여 AIO Module Number 찾기
function AxaInfoGetModuleNo (lBoardNo : LongInt; lModulePos : LongInt; lpModuleNo : PLongInt) : DWord; stdcall;
// Board Number와 Module Position을 이용하여 DIO Module Number 찾기
function AxdInfoGetModuleNo (lBoardNo : LongInt; lModulePos : LongInt; lpModuleNo : PLongInt) : DWord; stdcall;

// 지정 축에 IPCOMMAND Setting
function AxmSetCommand (lAxisNo : LongInt; sCommand : Byte) : DWord; stdcall;
// 지정 축에 8bit IPCOMMAND Setting
function AxmSetCommandData08 (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 8bit IPCOMMAND 가져오기
function AxmGetCommandData08 (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;
// 지정 축에 16bit IPCOMMAND Setting
function AxmSetCommandData16 (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 16bit IPCOMMAND 가져오기
function AxmGetCommandData16 (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;
// 지정 축에 24bit IPCOMMAND Setting
function AxmSetCommandData24 (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 24bit IPCOMMAND 가져오기
function AxmGetCommandData24 (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;
// 지정 축에 32bit IPCOMMAND Setting
function AxmSetCommandData32 (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 32bit IPCOMMAND 가져오기
function AxmGetCommandData32 (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;

// 지정 축에 QICOMMAND Setting
function AxmSetCommandQi (lAxisNo : LongInt; sCommand : Byte) : DWord; stdcall;
// 지정 축에 8bit IPCOMMAND Setting
function AxmSetCommandData08Qi (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 8bit IPCOMMAND 가져오기
function AxmGetCommandData08Qi (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;
// 지정 축에 16bit IPCOMMAND Setting
function AxmSetCommandData16Qi (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 16bit IPCOMMAND 가져오기
function AxmGetCommandData16Qi (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;
// 지정 축에 24bit IPCOMMAND Setting
function AxmSetCommandData24Qi (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 24bit IPCOMMAND 가져오기
function AxmGetCommandData24Qi (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;
// 지정 축에 32bit IPCOMMAND Setting
function AxmSetCommandData32Qi (lAxisNo : LongInt; sCommand : Byte; uData : DWord) : DWord; stdcall;
// 지정 축에 32bit IPCOMMAND 가져오기
function AxmGetCommandData32Qi (lAxisNo : LongInt; sCommand : Byte; upData : PDWord) : DWord; stdcall;

// 지정 축에 Port Data 가져오기 - IP
function AxmGetPortData(lAxisNo : LongInt; wOffset : WORD; upData : PDWord) : DWord; stdcall;
// 지정 축에 Port Data Setting - IP
function AxmSetPortData(lAxisNo : LongInt; wOffset : WORD; uData : DWord) : DWord; stdcall;

// 지정 축에 Port Data 가져오기 - QI
function AxmGetPortDataQi(lAxisNo : LongInt; wOffset : WORD; upData : PDWord) : DWord; stdcall;
// 지정 축에 Port Data Setting - QI
function AxmSetPortDataQi(lAxisNo : LongInt; wOffset : WORD; uData : DWord) : DWord; stdcall;

// 지정 축에 스크립트를 설정한다. - IP
// sc    : 스크립트 번호 (1 - 4)
// event : 발생할 이벤트 SCRCON 을 정의한다.
//         이벤트 설정 축갯수설정, 이벤트 발생할 축, 이벤트 내용 1,2 속성 설정한다.
// cmd   : 어떤 내용을 바꿀것인지 선택 SCRCMD를 정의한다.
// data  : 어떤 Data를 바꿀것인지 선택
function AxmSetScriptCaptionIp(lAxisNo : LongInt; sc : LongInt; event : DWord; data : DWord) : DWord; stdcall;
// 지정 축에 스크립트를 반환한다. - IP
function AxmGetScriptCaptionIp(lAxisNo : LongInt; sc : LongInt; event : PDWord; data : PDWord) : DWord; stdcall;

// 지정 축에 스크립트를 설정한다. - QI
// sc    : 스크립트 번호 (1 - 4)
// event : 발생할 이벤트 SCRCON 을 정의한다.
//         이벤트 설정 축갯수설정, 이벤트 발생할 축, 이벤트 내용 1,2 속성 설정한다.
// cmd   : 어떤 내용을 바꿀것인지 선택 SCRCMD를 정의한다.
// data  : 어떤 Data를 바꿀것인지 선택
function AxmSetScriptCaptionQi(lAxisNo : LongInt; sc : LongInt; event : DWord; cmd : DWord; data : DWord) : DWord; stdcall;
// 지정 축에 스크립트를 반환한다. - QI
function AxmGetScriptCaptionQi(lAxisNo : LongInt; sc : LongInt; event : PDWord; cmd : PDWord; data : PDWord) : DWord; stdcall;

// 지정 축에 스크립트 내부 Queue Index를 Clear 시킨다.
// uSelect IP. 
// uSelect(0): 스크립트 Queue Index 를 Clear한다.
//        (1): 캡션 Queue를 Index Clear한다.

// uSelect QI. 
// uSelect(0): 스크립트 Queue 1 Index 을 Clear한다.
//        (1): 스크립트 Queue 2 Index 를 Clear한다.

function AxmSetScriptCaptionQueueClear(lAxisNo : LongInt; uSelect : DWord) : DWord; stdcall;

// 지정 축에 스크립트 내부 Queue의 Index 반환한다. 
// uSelect IP
// uSelect(0): 스크립트 Queue Index를 읽어온다.
//        (1): 캡션 Queue Index를 읽어온다.

// uSelect QI. 
// uSelect(0): 스크립트 Queue 1 Index을 읽어온다.
//        (1): 스크립트 Queue 2 Index를 읽어온다.
function AxmGetScriptCaptionQueueCount(lAxisNo : LongInt; updata : PDWord; uSelect : DWord) : DWord; stdcall;

// 지정 축에 스크립트 내부 Queue의 Data갯수 반환한다. 
// uSelect IP
// uSelect(0): 스크립트 Queue Data 를 읽어온다.
//        (1): 캡션 Queue Data를 읽어온다.

// uSelect QI.
// uSelect(0): 스크립트 Queue 1 Data 읽어온다.
//        (1): 스크립트 Queue 2 Data 읽어온다.
function AxmGetScriptCaptionQueueDataCount(lAxisNo : LongInt; updata : PDWord; uSelect : DWord) : DWord; stdcall;

// 내부 데이타를 읽어온다.
function AxmGetOptimizeDriveData(lAxisNo : LongInt; dMinVel : Double; dVel : Double; dAccel : Double; dDecel : Double; 
        wRangeData : PWord; wStartStopSpeedData : PWord; wObjectSpeedData : PWord; wAccelRate : PWord; wDecelRate : PWord) : DWord; stdcall;

// 보드내에 레지스터를 Byte단위로 설정 및 확인한다.
function AxmBoardWriteByte(lBoardNo : LongInt; wOffset : Word; byData : Byte) : DWord; stdcall;
function AxmBoardReadByte(lBoardNo : LongInt; wOffset : Word; byData : PByte) : DWord; stdcall;

// 보드내에 레지스터를 Word단위로 설정 및 확인한다.
function AxmBoardWriteWord(lBoardNo : LongInt; wOffset : Word; wData : Word) : DWord; stdcall;
function AxmBoardReadWord(lBoardNo : LongInt; wOffset : Word; wData : PWord) : DWord; stdcall;

// 보드내에 레지스터를 DWord단위로 설정 및 확인한다.
function AxmBoardWriteDWord(lBoardNo : LongInt; wOffset : Word; dwData : DWord) : DWord; stdcall;
function AxmBoardReadDWord(lBoardNo : LongInt; wOffset : Word; dwData : PDWord) : DWord; stdcall;

// 보드내에 모듈에 레지스터를 Byte설정 및 확인한다.
function AxmModuleWriteByte(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; byData : Byte) : DWord; stdcall;
function AxmModuleReadByte(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; byData : PByte) : DWord; stdcall;

// 보드내에 모듈에 레지스터를 Word설정 및 확인한다.
function AxmModuleWriteWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; wData : Word) : DWord; stdcall;
function AxmModuleReadWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; wData : PWord) : DWord; stdcall;

// 보드내에 모듈에 레지스터를 DWord설정 및 확인한다.
function AxmModuleWriteDWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; dwData : DWord) : DWord; stdcall;
function AxmModuleReadDWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; dwData : PDWord) : DWord; stdcall;

// 외부 위치 비교기에 값을 설정한다.(Pos = Unit)
function AxmStatusSetActComparatorPos(lAxisNo : LongInt; dPos : Double) : DWord; stdcall;
// 외부 위치 비교기에 값을 반환한다.(Positon = Unit)
function AxmStatusGetActComparatorPos(lAxisNo : LongInt; dpPos : PDouble) : DWord; stdcall;

// 내부 위치 비교기에 값을 설정한다.(Pos = Unit)
function AxmStatusSetCmdComparatorPos(lAxisNo : LongInt; dPos : Double) : DWord; stdcall;
// 내부 위치 비교기에 값을 반환한다.(Pos = Unit)
function AxmStatusGetCmdComparatorPos(lAxisNo : LongInt; dpPos : PDouble) : DWord; stdcall;

//======= 추가 함수 =========================================================================================================

// 직선 보간 을 속도만 가지고 무한대로 증가한다.
// 속도 비율대로 거리를 넣어주어야 한다. 
function AxmLineMoveVel(lCoord : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

//========= 센서 위치 구동 함수( 필독: IP만가능 , QI에는 기능없음)=========================================================================

// 지정 축의 Sensor 신호의 사용 유무 및 신호 입력 레벨을 설정한다.
// 사용 유무 LOW(0), HIGH(1), UNUSED(2), USED(3)
function AxmSensorSetSignal(lAxisNo : LongInt; uLevel : DWord) : DWord; stdcall;
// 지정 축의 Sensor 신호의 사용 유무 및 신호 입력 레벨을 반환한다.
function AxmSensorGetSignal(lAxisNo : LongInt; upLevel : PDWord) : DWord; stdcall;
// 지정 축의 Sensor 신호의 입력 상태를 반환한다
function AxmSensorReadSignal(lAxisNo : LongInt; upStatus : PDWord) : DWord; stdcall;

// 지정 축의 설정된 속도와 가속율로 센서 위치 드라이버를 구동한다.
// Sensor 신호의 Active level입력 이후 상대 좌표로 설정된 거리만큼 구동후 정지한다.
// 펄스가 출력되는 시점에서 함수를 벗어난다.
// lMethod :  0 - 일반 구동, 1 - 센서 신호 검출 전은 저속 구동. 신호 검출 후 일반 구동
//            2 - 저속 구동
function AxmSensorMovePos(lAxisNo : LongInt; dPos : Double; dVel : Double; dAccel : Double; dDecel : Double; lMethod : LongInt) : DWord; stdcall;

// 지정 축의 설정된 속도와 가속율로 센서 위치 드라이버를 구동한다.
// Sensor 신호의 Active level입력 이후 상대 좌표로 설정된 거리만큼 구동후 정지한다.
// 펄스 출력이 종료되는 시점에서 함수를 벗어난다.
function AxmSensorStartMovePos(lAxisNo : LongInt; dPos : Double; dVel : Double; dAccel : Double; dDecel : Double; lMethod : LongInt) : DWord; stdcall;

// 원점검색 진행스탭 변화의 기록을 반환한다.
// lpStepCount      : 기록된 Step의 개수
// upMainStepNumber : 기록된 MainStepNumber 정보의 배열포인트
// upStepNumber     : 기록된 StepNumber 정보의 배열포인트
// upStepBranch     : 기록된 Step별 Branch 정보의 배열포인트
// 주의: 배열개수는 50개로 고정
function AxmHomeGetStepTrace(lAxisNo : LongInt; lpStepCount : PLongInt; upMainStepNumber : PDWord; upStepNumber : PDWord; upStepBranch : PDWord) : DWord; stdcall;

//=======추가 홈 서치 (PI-N804/404에만 해당됨.)=================================================================================
// 사용자가 지정한 축의 홈설정 파라메타를 설정한다.(QI칩 전용 레지스터 이용).
// uZphasCount : 홈 완료후에 Z상 카운트(0 - 15)
// lHomeMode   : 홈 설정 모드( 0 - 12)
// lClearSet   : 위치 클리어 , 잔여펄스 클리어 사용 선택 (0 - 3)
//               0: 위치클리어 사용않함, 잔여펄스 클리어 사용 안함
//                 1: 위치클리어 사용함, 잔여펄스 클리어 사용 안함
//               2: 위치클리어 사용안함, 잔여펄스 클리어 사용함
//               3: 위치클리어 사용함, 잔여펄스 클리어 사용함.
// dOrgVel : 홈관련 Org  Speed 설정 
// dLastVel: 홈관련 Last Speed 설정 
function AxmHomeSetConfig(lAxisNo : LongInt; uZphasCount : DWord; lHomeMode : LongInt; lClearSet : LongInt; dOrgVel : Double; dLastVel : Double; dLeavePos : Double) : DWord; stdcall;
// 사용자가 지정한 축의 홈설정 파라메타를 반환한다.
function AxmHomeGetConfig(lAxisNo : LongInt; upZphasCount : PDword; lpHomeMode : PLongInt; lpClearSet : PLongInt; dpOrgVel : PDouble; dpLastVel : PDouble; dpLeavePos : PDouble) : DWord; stdcall;
